--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.7",
+    "@react-native-camera-roll/camera-roll": "~5.0.0",
     "@react-native-community/cameraroll": "~4.1.2",
     "@react-native-community/clipboard": "~1.5.1",
     "@react-native-community/geolocation": "~2.1.0",
