--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 node_modules/
 ios/Pods/
-android/app/build/
+android/app/build/generated/
+android/app/build/intermediates/
+android/app/build/outputs/
+android/app/build/tmp/
